[package]
name = "tzlink"
version = "0.1.0"
edition = "2024"
authors = ["Suleiman Nassdaq <mwaijegakelvin@gmail.com>"]
description = "A modular Rust crate that connects developers to Tanzanian digital infrastructure using feature-based components."
license = "MIT"
repository = "https://github.com/nassdaq/tzlink"
keywords = ["tanzania", "api", "rust"]
categories = ["api-bindings", "data-access"]

[features]
default = []
sarufi = ["reqwest", "serde", "tokio"]
full = ["sarufi"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
